--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
-
-debug=true
-trace=false
-
-# SERVER CONFIG
-server.port=8090
-
 spring.jpa.database=MYSQL
 spring.datasource.platform=mysql
 spring.datasource.url = jdbc:mysql://localhost:3306/blog_java?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
+# security.oauth2.resource.filter-order=3
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8090
+
+# LOGGING CONFIG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
