--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,11 @@ spring.datasource.platform=mysql
 spring.datasource.url = jdbc:mysql://localhost:3306/blog_java?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
-# security.oauth2.resource.filter-order=3
+security.oauth2.resource.filter-order=3
+
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.show_sql=true
