update blog java springboot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=8090
 
 # LOGGING CONFIG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type=TRACE
+
+cons.role-sysadmin-id = 1
