--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.database=MYSQL
 spring.datasource.platform=mysql
 spring.datasource.url = jdbc:mysql://localhost:3306/blog_java?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
@@ -14,10 +15,16 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 
-server.port=8090
+server.port=9090
 
 # LOGGING CONFIG
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type=TRACE
 
 cons.role-sysadmin-id = 1
+
+# Redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.timeout=10000
+
